# cpp_Extract_Revision

./: .gitattributes  .gitignore  COMMIT_GUIDE.md  README.md  READY_TO_PUSH.md  download_deps.py  git_setup_and_push.bat  requirements.txt  test_extraction.py  test_hybrid_integration.py  test_ui_drawer.py  编程计划.md
.kiro/specs/1k3d68-optimization/: design.md  requirements.md  tasks.md
assets/models/FAN/: 2DFAN-4.onnx  2DFAN.onnx
assets/models/S3FD/: S3FD.onnx
core/: CMakeLists.txt  build_cpp.bat  test_insightface_backend.py
core/src/: FANExtractor.cpp  FANExtractor.h  FacePipeline.cpp  FacePipeline.h  InsightFaceLandmark.cpp  InsightFaceLandmark.h  S3FDExtractor.cpp  S3FDExtractor.h  SCRFDExtractor.cpp  SCRFDExtractor.h  interface.cpp  interface.h  main.cpp  utils.h
logs/: metadata_compare.csv
sdk/: compare_results.py  main.py
sdk/_libs/: FaceExtractorWrapper.py
sdk/_libs/DFLIMG/: DFLJPG.py
sdk/_libs/core/: np_compat.py
sdk/_libs/core/imagelib/: text.py
sdk/_libs/core/joblib/: SubprocessorBase.py
sdk/_libs/core/leras/: nn.py
sdk/_libs/core/leras/models/: XSeg.py
sdk/_libs/facelib/: FANExtractor.py  LandmarksProcessor.py  S3FDExtractor.py  WrapperManager.py
sdk/core_logic/: __init__.py  debug_backend.py  extractor.py  filter.py  ui.py  utils.py
tests/: CRITICAL_FIX.md  CURRENT_STATUS.md  EXPERIMENT_GUIDE.md  FINAL_STATUS.md  FIX_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  QUICK_START.md  ROLLBACK_INSTRUCTIONS.md  check_dll_paths.py  check_model_input_size.py  debug_landmarks.py  example_accurate_extraction.py  experiment_auto.py  experiment_crop_factor.py  experiment_norm_mode.py  run_full_verification.bat  test_app15_compare.py  test_app15_cpp.py  test_compare_2dfan.bat  test_compare_2dfan.py  test_comprehensive.bat  test_comprehensive.py  test_confidence.py  test_crop_fix.bat  test_crop_fix.py  test_debug_preview.bat  test_debug_preview.py  test_debug_turbojpeg.bat  test_debug_turbojpeg.py  test_debug_ui.bat  test_debug_ui.py  test_face_proportion.py  test_final_features.bat  test_final_features.py  test_final_verification.bat  test_final_verification.py  test_phase1_basic.bat  test_phase1_basic.py  test_single_model.py  test_turbojpeg.bat  (+3 more)
